2308010: add net graph api
