# brillinkmicros/api/graph/v1/graph_tree.pb.go
@@ -295,12 +295,12 @@ type TreeNodesResp struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Total    uint32      `protobuf:"varint,1,opt,name=total,proto3" json:"total,omitempty"`
-	Current  uint32      `protobuf:"varint,2,opt,name=current,proto3" json:"current,omitempty"`
-	PageSize uint32      `protobuf:"varint,3,opt,name=page_size,json=pageSize,proto3" json:"page_size,omitempty"`
-	Success  bool        `protobuf:"varint,4,opt,name=success,proto3" json:"success,omitempty"`
-	Code     int32       `protobuf:"varint,5,opt,name=code,proto3" json:"code,omitempty"`
-	Msg      string      `protobuf:"bytes,6,opt,name=msg,proto3" json:"msg,omitempty"`
+	Success  bool        `protobuf:"varint,1,opt,name=success,proto3" json:"success,omitempty"`
+	Code     int32       `protobuf:"varint,2,opt,name=code,proto3" json:"code,omitempty"`
+	Msg      string      `protobuf:"bytes,3,opt,name=msg,proto3" json:"msg,omitempty"`
+	Total    uint32      `protobuf:"varint,4,opt,name=total,proto3" json:"total,omitempty"`
+	Current  uint32      `protobuf:"varint,5,opt,name=current,proto3" json:"current,omitempty"`
+	PageSize uint32      `protobuf:"varint,6,opt,name=page_size,json=pageSize,proto3" json:"page_size,omitempty"`
 	Data     []*TreeNode `protobuf:"bytes,7,rep,name=data,proto3" json:"data,omitempty"`
 }
 
@@ -336,27 +336,6 @@ func (*TreeNodesResp) Descriptor() ([]byte, []int) {
 	return file_api_graph_v1_graph_tree_proto_rawDescGZIP(), []int{4}
 }
 
-func (x *TreeNodesResp) GetTotal() uint32 {
-	if x != nil {
-		return x.Total
-	}
-	return 0
-}
-
-func (x *TreeNodesResp) GetCurrent() uint32 {
-	if x != nil {
-		return x.Current
-	}
-	return 0
-}
-
-func (x *TreeNodesResp) GetPageSize() uint32 {
-	if x != nil {
-		return x.PageSize
-	}
-	return 0
-}
-
 func (x *TreeNodesResp) GetSuccess() bool {
 	if x != nil {
 		return x.Success
@@ -376,6 +355,27 @@ func (x *TreeNodesResp) GetMsg() string {
 		return x.Msg
 	}
 	return ""
+}
+
+func (x *TreeNodesResp) GetTotal() uint32 {
+	if x != nil {
+		return x.Total
+	}
+	return 0
+}
+
+func (x *TreeNodesResp) GetCurrent() uint32 {
+	if x != nil {
+		return x.Current
+	}
+	return 0
+}
+
+func (x *TreeNodesResp) GetPageSize() uint32 {
+	if x != nil {
+		return x.PageSize
+	}
+	return 0
 }
 
 func (x *TreeNodesResp) GetData() []*TreeNode {
@@ -516,12 +516,12 @@ type TitleAutoCompleteResp struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Total    uint32               `protobuf:"varint,1,opt,name=total,proto3" json:"total,omitempty"`
-	Current  uint32               `protobuf:"varint,2,opt,name=current,proto3" json:"current,omitempty"`
-	PageSize uint32               `protobuf:"varint,3,opt,name=page_size,json=pageSize,proto3" json:"page_size,omitempty"`
-	Success  bool                 `protobuf:"varint,4,opt,name=success,proto3" json:"success,omitempty"`
-	Code     int32                `protobuf:"varint,5,opt,name=code,proto3" json:"code,omitempty"`
-	Msg      string               `protobuf:"bytes,6,opt,name=msg,proto3" json:"msg,omitempty"`
+	Success  bool                 `protobuf:"varint,1,opt,name=success,proto3" json:"success,omitempty"`
+	Code     int32                `protobuf:"varint,2,opt,name=code,proto3" json:"code,omitempty"`
+	Msg      string               `protobuf:"bytes,3,opt,name=msg,proto3" json:"msg,omitempty"`
+	Total    uint32               `protobuf:"varint,4,opt,name=total,proto3" json:"total,omitempty"`
+	Current  uint32               `protobuf:"varint,5,opt,name=current,proto3" json:"current,omitempty"`
+	PageSize uint32               `protobuf:"varint,6,opt,name=page_size,json=pageSize,proto3" json:"page_size,omitempty"`
 	Data     []*TitleAutoComplete `protobuf:"bytes,7,rep,name=data,proto3" json:"data,omitempty"`
 }
 
@@ -557,27 +557,6 @@ func (*TitleAutoCompleteResp) Descriptor() ([]byte, []int) {
 	return file_api_graph_v1_graph_tree_proto_rawDescGZIP(), []int{7}
 }
 
-func (x *TitleAutoCompleteResp) GetTotal() uint32 {
-	if x != nil {
-		return x.Total
-	}
-	return 0
-}
-
-func (x *TitleAutoCompleteResp) GetCurrent() uint32 {
-	if x != nil {
-		return x.Current
-	}
-	return 0
-}
-
-func (x *TitleAutoCompleteResp) GetPageSize() uint32 {
-	if x != nil {
-		return x.PageSize
-	}
-	return 0
-}
-
 func (x *TitleAutoCompleteResp) GetSuccess() bool {
 	if x != nil {
 		return x.Success
@@ -597,6 +576,27 @@ func (x *TitleAutoCompleteResp) GetMsg() string {
 		return x.Msg
 	}
 	return ""
+}
+
+func (x *TitleAutoCompleteResp) GetTotal() uint32 {
+	if x != nil {
+		return x.Total
+	}
+	return 0
+}
+
+func (x *TitleAutoCompleteResp) GetCurrent() uint32 {
+	if x != nil {
+		return x.Current
+	}
+	return 0
+}
+
+func (x *TitleAutoCompleteResp) GetPageSize() uint32 {
+	if x != nil {
+		return x.PageSize
+	}
+	return 0
 }
 
 func (x *TitleAutoCompleteResp) GetData() []*TitleAutoComplete {
@@ -698,16 +698,16 @@ var file_api_graph_v1_graph_tree_proto_rawDesc = []byte{
 	0x18, 0x04, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x16, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x67, 0x72, 0x61,
 	0x70, 0x68, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x72, 0x65, 0x65, 0x4e, 0x6f, 0x64, 0x65, 0x52, 0x04,
 	0x64, 0x61, 0x74, 0x61, 0x22, 0xc8, 0x01, 0x0a, 0x0d, 0x54, 0x72, 0x65, 0x65, 0x4e, 0x6f, 0x64,
-	0x65, 0x73, 0x52, 0x65, 0x73, 0x70, 0x12, 0x14, 0x0a, 0x05, 0x74, 0x6f, 0x74, 0x61, 0x6c, 0x18,
-	0x01, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x05, 0x74, 0x6f, 0x74, 0x61, 0x6c, 0x12, 0x18, 0x0a, 0x07,
-	0x63, 0x75, 0x72, 0x72, 0x65, 0x6e, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x07, 0x63,
+	0x65, 0x73, 0x52, 0x65, 0x73, 0x70, 0x12, 0x18, 0x0a, 0x07, 0x73, 0x75, 0x63, 0x63, 0x65, 0x73,
+	0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x08, 0x52, 0x07, 0x73, 0x75, 0x63, 0x63, 0x65, 0x73, 0x73,
+	0x12, 0x12, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x04,
+	0x63, 0x6f, 0x64, 0x65, 0x12, 0x10, 0x0a, 0x03, 0x6d, 0x73, 0x67, 0x18, 0x03, 0x20, 0x01, 0x28,
+	0x09, 0x52, 0x03, 0x6d, 0x73, 0x67, 0x12, 0x14, 0x0a, 0x05, 0x74, 0x6f, 0x74, 0x61, 0x6c, 0x18,
+	0x04, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x05, 0x74, 0x6f, 0x74, 0x61, 0x6c, 0x12, 0x18, 0x0a, 0x07,
+	0x63, 0x75, 0x72, 0x72, 0x65, 0x6e, 0x74, 0x18, 0x05, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x07, 0x63,
 	0x75, 0x72, 0x72, 0x65, 0x6e, 0x74, 0x12, 0x1b, 0x0a, 0x09, 0x70, 0x61, 0x67, 0x65, 0x5f, 0x73,
-	0x69, 0x7a, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x08, 0x70, 0x61, 0x67, 0x65, 0x53,
-	0x69, 0x7a, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x73, 0x75, 0x63, 0x63, 0x65, 0x73, 0x73, 0x18, 0x04,
-	0x20, 0x01, 0x28, 0x08, 0x52, 0x07, 0x73, 0x75, 0x63, 0x63, 0x65, 0x73, 0x73, 0x12, 0x12, 0x0a,
-	0x04, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x05, 0x20, 0x01, 0x28, 0x05, 0x52, 0x04, 0x63, 0x6f, 0x64,
-	0x65, 0x12, 0x10, 0x0a, 0x03, 0x6d, 0x73, 0x67, 0x18, 0x06, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03,
-	0x6d, 0x73, 0x67, 0x12, 0x2a, 0x0a, 0x04, 0x64, 0x61, 0x74, 0x61, 0x18, 0x07, 0x20, 0x03, 0x28,
+	0x69, 0x7a, 0x65, 0x18, 0x06, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x08, 0x70, 0x61, 0x67, 0x65, 0x53,
+	0x69, 0x7a, 0x65, 0x12, 0x2a, 0x0a, 0x04, 0x64, 0x61, 0x74, 0x61, 0x18, 0x07, 0x20, 0x03, 0x28,
 	0x0b, 0x32, 0x16, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x67, 0x72, 0x61, 0x70, 0x68, 0x2e, 0x76, 0x31,
 	0x2e, 0x54, 0x72, 0x65, 0x65, 0x4e, 0x6f, 0x64, 0x65, 0x52, 0x04, 0x64, 0x61, 0x74, 0x61, 0x22,
 	0x8a, 0x01, 0x0a, 0x14, 0x54, 0x69, 0x74, 0x6c, 0x65, 0x41, 0x75, 0x74, 0x6f, 0x43, 0x6f, 0x6d,
@@ -724,15 +724,15 @@ var file_api_graph_v1_graph_tree_proto_rawDesc = []byte{
 	0x52, 0x05, 0x74, 0x69, 0x74, 0x6c, 0x65, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x02, 0x20,
 	0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x22, 0xd9, 0x01, 0x0a, 0x15, 0x54, 0x69, 0x74, 0x6c,
 	0x65, 0x41, 0x75, 0x74, 0x6f, 0x43, 0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x74, 0x65, 0x52, 0x65, 0x73,
-	0x70, 0x12, 0x14, 0x0a, 0x05, 0x74, 0x6f, 0x74, 0x61, 0x6c, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0d,
+	0x70, 0x12, 0x18, 0x0a, 0x07, 0x73, 0x75, 0x63, 0x63, 0x65, 0x73, 0x73, 0x18, 0x01, 0x20, 0x01,
+	0x28, 0x08, 0x52, 0x07, 0x73, 0x75, 0x63, 0x63, 0x65, 0x73, 0x73, 0x12, 0x12, 0x0a, 0x04, 0x63,
+	0x6f, 0x64, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x12,
+	0x10, 0x0a, 0x03, 0x6d, 0x73, 0x67, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6d, 0x73,
+	0x67, 0x12, 0x14, 0x0a, 0x05, 0x74, 0x6f, 0x74, 0x61, 0x6c, 0x18, 0x04, 0x20, 0x01, 0x28, 0x0d,
 	0x52, 0x05, 0x74, 0x6f, 0x74, 0x61, 0x6c, 0x12, 0x18, 0x0a, 0x07, 0x63, 0x75, 0x72, 0x72, 0x65,
-	0x6e, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x07, 0x63, 0x75, 0x72, 0x72, 0x65, 0x6e,
-	0x74, 0x12, 0x1b, 0x0a, 0x09, 0x70, 0x61, 0x67, 0x65, 0x5f, 0x73, 0x69, 0x7a, 0x65, 0x18, 0x03,
-	0x20, 0x01, 0x28, 0x0d, 0x52, 0x08, 0x70, 0x61, 0x67, 0x65, 0x53, 0x69, 0x7a, 0x65, 0x12, 0x18,
-	0x0a, 0x07, 0x73, 0x75, 0x63, 0x63, 0x65, 0x73, 0x73, 0x18, 0x04, 0x20, 0x01, 0x28, 0x08, 0x52,
-	0x07, 0x73, 0x75, 0x63, 0x63, 0x65, 0x73, 0x73, 0x12, 0x12, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65,
-	0x18, 0x05, 0x20, 0x01, 0x28, 0x05, 0x52, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x12, 0x10, 0x0a, 0x03,
-	0x6d, 0x73, 0x67, 0x18, 0x06, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6d, 0x73, 0x67, 0x12, 0x33,
+	0x6e, 0x74, 0x18, 0x05, 0x20, 0x01, 0x28, 0x0d, 0x52, 0x07, 0x63, 0x75, 0x72, 0x72, 0x65, 0x6e,
+	0x74, 0x12, 0x1b, 0x0a, 0x09, 0x70, 0x61, 0x67, 0x65, 0x5f, 0x73, 0x69, 0x7a, 0x65, 0x18, 0x06,
+	0x20, 0x01, 0x28, 0x0d, 0x52, 0x08, 0x70, 0x61, 0x67, 0x65, 0x53, 0x69, 0x7a, 0x65, 0x12, 0x33,
 	0x0a, 0x04, 0x64, 0x61, 0x74, 0x61, 0x18, 0x07, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x1f, 0x2e, 0x61,
 	0x70, 0x69, 0x2e, 0x67, 0x72, 0x61, 0x70, 0x68, 0x2e, 0x76, 0x31, 0x2e, 0x54, 0x69, 0x74, 0x6c,
 	0x65, 0x41, 0x75, 0x74, 0x6f, 0x43, 0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x74, 0x65, 0x52, 0x04, 0x64,
